{
    "version": 1,
    "name": "GameControls",
    "maps": [
        {
            "name": "GamePlay",
            "id": "bf92221f-4fe5-475a-bfed-8ad127332995",
            "actions": [
                {
                    "name": "RightMovement",
                    "type": "Button",
                    "id": "c75c307e-c692-426a-b5e9-2355a36a8500",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftMovement",
                    "type": "Button",
                    "id": "a9fd2d64-3f4d-483c-b418-2de06e62f45a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Launch",
                    "type": "Button",
                    "id": "4b32a131-489b-43ed-8c22-7f44f0140481",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f520300b-e2d3-41ff-a6f7-7e25da73d135",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9fbe87ec-6314-449d-b439-9417384afad0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e0ee29e-b48f-41e4-bafe-09773fc13147",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4eb452d-1785-4360-9efc-a132e1c08476",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3c4231a-5b66-4006-93ff-283ed77a845f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Launch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}